# agent-compile

./: .gitignore  CLAUDE_example.md  README.md  SUMMARY.md  pyproject.toml  requirements.txt  research_journal.org  scratch.org
.beads/: issues.jsonl
agent_compile/: decompiled_spec.py
agent_compile/cli/: __init__.py  compile.py  decompile.py
agent_compile/core/: compiler.py  decompiler.py  module.py
examples/: example_spec.py
examples/calculator/: README.md  spec.py
examples/calculator/compiled_src/: calculator.py  test_calculator.py
examples/data_processor/: README.md  spec.py
examples/data_processor/compiled_src/: csv_reader.py  data_aggregator.py  data_validator.py  run_data_aggregator_tests.py  run_data_validator_tests.py  run_tests.py  test_csv_reader.py  test_data_aggregator.py  test_data_validator.py
examples/llm_introspection/: README.md  spec.py
examples/ml_classifier/: README.md  spec.py
src/: __init__.py  decompiled_spec.py  spec.py
src/cli/: compile.py  decompile.py
src/core/: __init__.py  agent.py  ambiguity.py  cache.py  claude_agent.py  compiler.py  decompiler.py  language_prompts.py  module.py
src/examples/: __init__.py  simple_example.py
