[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-compile"
version = "0.1.0"
description = "Spec-driven development tool - compile high-level specifications to executable code"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Elle Najt", email = "elle@example.com"}
]

dependencies = []

[project.scripts]
agent-compile = "agent_compile.cli.compile:main"
agent-decompile = "agent_compile.cli.decompile:main"

[project.urls]
Homepage = "https://github.com/ElleNajt/agent-compile"
Repository = "https://github.com/ElleNajt/agent-compile"

[tool.hatch.build.targets.wheel]
packages = ["agent_compile"]

[tool.hatch.build.targets.sdist]
include = [
    "/agent_compile",
    "/README.md",
    "/pyproject.toml",
]
